Update meta and fix text alignment

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,6 +21,7 @@ code {
 
 .small-text {
   font-size: 12px !important;
+  color: #333;
 }
 
 p {
@@ -31,7 +32,7 @@ p {
 }
 
 .c19-info-text {
-  color: #929292;
+  color: #656565;
 }
 
 .helpline-text {
